[FIX] Fixed future deprecated syntaxes

--- a/src/kdrama_rating_ml.ipynb
+++ b/src/kdrama_rating_ml.ipynb
@@ -555,14 +555,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/js/n5lc337x5sd6y0sqph8lr6gm0000gn/T/ipykernel_8226/126998617.py:5: FutureWarning: Using the level keyword in DataFrame and Series aggregations is deprecated and will be removed in a future version. Use groupby instead. df.sum(level=1) should use df.groupby(level=1).sum().\n",
-      "  kdrama_genres = pd.get_dummies(kdrama_data[\"Genre\"].apply(pd.Series) \\\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -783,7 +775,8 @@
     "kdrama_data[\"Genre\"] = kdrama_data[\"Genre\"].apply(lambda genre_list: list(map(str.strip, genre_list)))\n",
     "kdrama_genres = pd.get_dummies(kdrama_data[\"Genre\"].apply(pd.Series) \\\n",
     "                                                 .stack()) \\\n",
-    "                                                 .sum(level=0)\n",
+    "                                                 .groupby(level=0) \\\n",
+    "                                                 .sum()\n",
     "kdrama_data = pd.concat([kdrama_data, kdrama_genres], axis=1)\n",
     "kdrama_data.head()"
    ]
@@ -793,14 +786,6 @@
    "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/js/n5lc337x5sd6y0sqph8lr6gm0000gn/T/ipykernel_8226/3352260343.py:5: FutureWarning: Using the level keyword in DataFrame and Series aggregations is deprecated and will be removed in a future version. Use groupby instead. df.sum(level=1) should use df.groupby(level=1).sum().\n",
-      "  kdrama_air_days = pd.get_dummies(kdrama_data[\"Aired On\"].apply(pd.Series) \\\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1022,7 +1007,8 @@
     "kdrama_data[\"Aired On\"] = kdrama_data[\"Aired On\"].apply(lambda air_day: list(map(str.strip, air_day)))\n",
     "kdrama_air_days = pd.get_dummies(kdrama_data[\"Aired On\"].apply(pd.Series) \\\n",
     "                                                 .stack()) \\\n",
-    "                                                 .sum(level=0)\n",
+    "                                                 .groupby(level=0) \\\n",
+    "                                                 .sum()\n",
     "kdrama_air_days = kdrama_air_days[[\"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Saturday\", \"Sunday\"]]\n",
     "kdrama_data = pd.concat([kdrama_data, kdrama_air_days], axis=1)\n",
     "kdrama_data.head()"
@@ -1070,9 +1056,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/js/n5lc337x5sd6y0sqph8lr6gm0000gn/T/ipykernel_8226/3337028707.py:3: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "/var/folders/js/n5lc337x5sd6y0sqph8lr6gm0000gn/T/ipykernel_8499/3337028707.py:3: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  kdrama_data[\"Duration\"] = kdrama_data[\"Duration\"].str.replace('hr.', 'h')\n",
-      "/var/folders/js/n5lc337x5sd6y0sqph8lr6gm0000gn/T/ipykernel_8226/3337028707.py:4: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "/var/folders/js/n5lc337x5sd6y0sqph8lr6gm0000gn/T/ipykernel_8499/3337028707.py:4: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  kdrama_data[\"Duration\"] = kdrama_data[\"Duration\"].str.replace('min.', 'm')\n"
      ]
     },
@@ -1293,9 +1279,9 @@
    "source": [
     "# Transform duration to minutes \n",
     "\n",
-    "kdrama_data[\"Duration\"] = kdrama_data[\"Duration\"].str.replace('hr.', 'h')\n",
-    "kdrama_data[\"Duration\"] = kdrama_data[\"Duration\"].str.replace('min.', 'm')\n",
-    "kdrama_data[\"Duration\"] = kdrama_data[\"Duration\"].str.replace(' ', '')\n",
+    "kdrama_data[\"Duration\"] = kdrama_data[\"Duration\"].str.replace('hr.', 'h', regex=True)\n",
+    "kdrama_data[\"Duration\"] = kdrama_data[\"Duration\"].str.replace('min.', 'm', regex=True)\n",
+    "kdrama_data[\"Duration\"] = kdrama_data[\"Duration\"].str.replace(' ', '', regex=True)\n",
     "kdrama_data[\"Duration_mins\"] = pd.to_timedelta(kdrama_data[\"Duration\"])\n",
     "kdrama_data[\"Duration_mins\"] = kdrama_data[\"Duration_mins\"].dt.total_seconds().div(60)\n",
     "kdrama_data.head()"
@@ -1536,7 +1522,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 250 NaN values.\n"
+      "There are 0 NaN values.\n"
      ]
     }
    ],
@@ -1607,7 +1593,7 @@
        "      <td>2021</td>\n",
        "      <td>Netflix</td>\n",
        "      <td>10</td>\n",
-       "      <td>None</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>9.2</td>\n",
        "      <td>Kim Sung Ho</td>\n",
        "      <td>Lee Je Hoon</td>\n",
@@ -1631,7 +1617,7 @@
        "      <td>2020</td>\n",
        "      <td>tvN</td>\n",
        "      <td>16</td>\n",
-       "      <td>None</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>9.1</td>\n",
        "      <td>Kim Chul Gyu</td>\n",
        "      <td>Lee Joon Gi</td>\n",
@@ -1655,7 +1641,7 @@
        "      <td>2020</td>\n",
        "      <td>Netflix</td>\n",
        "      <td>12</td>\n",
-       "      <td>None</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>9.1</td>\n",
        "      <td>Shin Won Ho</td>\n",
        "      <td>Jo Jung Suk</td>\n",
@@ -1679,7 +1665,7 @@
        "      <td>2021</td>\n",
        "      <td>Netflix</td>\n",
        "      <td>12</td>\n",
-       "      <td>None</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>9.1</td>\n",
        "      <td>Shin Won Ho</td>\n",
        "      <td>Jo Jung Suk</td>\n",
@@ -1703,7 +1689,7 @@
        "      <td>2018</td>\n",
        "      <td>tvN</td>\n",
        "      <td>16</td>\n",
-       "      <td>None</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>9.1</td>\n",
        "      <td>Kim Won Suk</td>\n",
        "      <td>Lee Sun Kyun</td>\n",
@@ -1734,12 +1720,12 @@
        "3  Hospital Playlist 2             2021          Netflix                  12   \n",
        "4            My Mister             2018              tvN                  16   \n",
        "\n",
-       "  Content_Rating  Rating      Director          Cast Production_companies  \\\n",
-       "0           None     9.2   Kim Sung Ho   Lee Je Hoon        Page One Film   \n",
-       "1           None     9.1  Kim Chul Gyu   Lee Joon Gi        Monster Union   \n",
-       "2           None     9.1   Shin Won Ho   Jo Jung Suk        Egg Is Coming   \n",
-       "3           None     9.1   Shin Won Ho   Jo Jung Suk        Egg Is Coming   \n",
-       "4           None     9.1   Kim Won Suk  Lee Sun Kyun     Chorokbaem Media   \n",
+       "   Content_Rating  Rating      Director          Cast Production_companies  \\\n",
+       "0             4.0     9.2   Kim Sung Ho   Lee Je Hoon        Page One Film   \n",
+       "1             3.0     9.1  Kim Chul Gyu   Lee Joon Gi        Monster Union   \n",
+       "2             3.0     9.1   Shin Won Ho   Jo Jung Suk        Egg Is Coming   \n",
+       "3             3.0     9.1   Shin Won Ho   Jo Jung Suk        Egg Is Coming   \n",
+       "4             3.0     9.1   Kim Won Suk  Lee Sun Kyun     Chorokbaem Media   \n",
        "\n",
        "   Action  ...  Thriller  Youth  Monday  Tuesday  Wednesday  Thursday  Friday  \\\n",
        "0       0  ...         0      0       0        0          0         0       1   \n",
